# src/auth/auth.router.ts
@@ -12,8 +12,8 @@ import {
 import validate from "../helpers/function-helpers/validate";
 
 const signUpInSchema = Joi.object({
-  email: Joi.string().required(),
-  password: Joi.string().required(),
+  email: Joi.string().min(3).max(254).required(),
+  password: Joi.string().min(8).max(100).required(),
 });
 
 const refreshTokensSchema = Joi.object({
