# swagger.json
@@ -11,7 +11,7 @@
   },
   "consumes": ["application/json"],
   "produces": ["application/json"],
-  "servers": [],
+  "servers": [{ "url": "https://questify-backend.goit.global" }],
   "tags": [
     {
       "name": "Auth",
@@ -346,12 +346,16 @@
           "email": {
             "type": "string",
             "description": "User's email",
-            "format": "email"
+            "format": "email",
+            "minimum": 3,
+            "maximum": 254
           },
           "password": {
             "type": "string",
             "description": "User's password",
-            "example": "qwerty123"
+            "example": "qwerty123",
+            "minimum": 8,
+            "maximum": 100
           }
         }
       },
@@ -502,7 +506,9 @@
           "title": {
             "type": "string",
             "description": "Card's title",
-            "example": "Take out the trash"
+            "example": "Take out the trash",
+            "minimum": 2,
+            "maximum": 100
           },
           "difficulty": {
             "type": "string",
@@ -594,7 +600,9 @@
           "title": {
             "type": "string",
             "description": "Card's title",
-            "example": "Take out the trash"
+            "example": "Take out the trash",
+            "minimum": 2,
+            "maximum": 100
           },
           "difficulty": {
             "type": "string",
